--- a/kwetterjs/src/app/home/home.component.html
+++ b/kwetterjs/src/app/home/home.component.html
@@ -1,31 +1,31 @@
 <body>
-  <!-- <form>
-    <button (click)="logOut()">Logout</button>
-    <button (click)="goToProfile()">Profile</button>
-  </form> -->
+  <nav>
+    <a (click)="logout()" routerLink="/login" routerLinkActive="Active" style="float: right;">Logout</a>
+    <a routerLink="/profile" routerLinkActive="Active">Profile</a>
+  </nav>
   <div class="page-container">
-    <form>
-      <textarea></textarea>
-      <button (click)="createTweet()">Tweet!</button>
+    <form (ngSubmit)="createTweet()">
+      <input [(ngModel)]="data.tweet" name="tweet"/>
+      <button type="submit">Tweet!</button>
     </form>
-    <div class="tweets-container">
+      <div class="tweets-container">
+        <form>
+          <div class="tweet" *ngFor="let tweet of allTweets">
+            {{tweet.user.username}} <br />
+            {{tweet.message}}
+          </div>
+        </form>
+      </div>
+    <div class="users-container">
       <form>
-        <div class="tweet" *ngFor="let tweet of allTweets">
-          {{tweet.user.username}} <br />
-          {{tweet.message}}
-        </div>
-      </form>
-    </div>
-    <!-- <div class="users-container">
-      <form>
-        Following: <button (click)="setListNr(1)">0</button><br />
-        Followers: <button (click)="setListNr(2)">0</button><br />
-        <input style="text"/>
-        <button (click)="setListNr(3)">
-          <div *ngFor="user in getUserList()">
-            user.username;
+        Following: <button (click)="setListNr(1)">View</button><br />
+        Followers: <button (click)="setListNr(2)">View</button><br />
+        <input [(ngModel)]="data.search" name="search"/>
+        <button (click)="setListNr(3)">Search</button>
+          <div *ngFor="let user of userList">
+            {{user.username}}
           </div>
       </form>
-    </div> -->
+    </div>
   </div>
 </body>
